...
    func headerView() -> some View {
        HStack {
            VStack(alignment: .leading) {
                Text(Date.now.toString(dateFormat: "EEEE, MMM dd").uppercased())
                    .foregroundStyle(.white)
                    .font(.system(size: 14, weight: .semibold))
                Text("Today")
                    .textStyle(LargeTitleTextStyle())
            }
            .padding()
            
            Spacer()
            
...
                Task {
                    await userViewModel.logout()
                    
                    mainRouter.dismissScreen()
                }
            } label: {
                Text("Logout")
                    .textStyle(MediumLinkTextStyle())
            }
            
            .padding()
            
            Spacer()
...
